--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,22 +1,33 @@
-name: Deploy Project
-on: [push, workflow_dispatch]
+name: Check code
+on: [push, workflow_dispatch],
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
-
       - name: 💿 Install NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: 🛠 Install dependencies
         run: npm ci
-
       - name: 🚦 Run tests
         run: npm test
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⬇️ Get code
+        uses: actions/checkout@v3
+      - name: 💿 Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: 🛠 Install dependencies
+        run: npm ci
+      - name: 🚦 Lint
+        run: npm run lint
 
   deploy:
     needs: test
@@ -24,17 +35,13 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
-
       - name: 💿 Install NodeJS
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: 🛠 Install dependencies
         run: npm ci
-
       - name: 👷‍♂️ Build project
         run: npm run build
-
       - name: 🚀 Deploy
         run: echo "Deploying..." 
