add upload artifacts step

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,15 +1,15 @@
 name: Events Demo 1
 on:
-  pull_request:
-    types: 
-      - opened
+  # pull_request:
+  #   types: 
+  #     - opened
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - master
-    paths-ignore:
-      - '.github/workflows/*'
+  # push:
+  #   branches:
+  #     - main
+  #     - master
+  #   paths-ignore:
+  #     - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
