--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -24,6 +24,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
@@ -31,6 +33,9 @@ jobs:
         run: npm ci
       - name: 👷‍♂️ Build project
         run: npm run build
+      - name: 📰 Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo '::set-output name=script-file::{}' ';'
       - name: 🔼 Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -49,5 +54,7 @@ jobs:
           name: dist-files
       - name: 🔍 See contents
         run: ls
+      - name: 👓 Read filename from another job
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: 🚀 Deploy
         run: echo "Deploying ..."
