--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
+      - name: 🗃 Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: 💿 Install NodeJS
         uses: actions/setup-node@v3
         with:
@@ -29,6 +34,11 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
+      - name: 🗃 Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: 🛠 Install dependencies
         run: npm ci
       - name: 👷‍♂️ Build project
