--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Test code
-        id: run-test
-        run: npm run tests
+        id: run-tests
+        run: npm run test
       - name: Upload test report
         if:  steps.run-tests.outcome == 'failure'
         uses: actions/upload-artifact@v3
