--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,32 +1,32 @@
-name: Events Demo 1
-on:
-  # pull_request:
-  #   types: 
-  #     - opened
-  workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
-  #     - master
-  #   paths-ignore:
-  #     - '.github/workflows/*'
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Output event data
-        run: echo "${{ toJSON(github.event) }}"
-      - name: ⬇️ Get code
-        uses: actions/checkout@v3
-      - name: 💿 Install NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: 🛠 Install dependencies
-        run: npm ci
-      - name: 🚦 Run tests
-        run: npm test
-      - name: 👷‍♂️ Build project
-        run: npm run build
-      - name: 🚀 Deploy
-        run: echo "Deploying..." 
+# name: Events Demo 1
+# on:
+#   # pull_request:
+#   #   types: 
+#   #     - opened
+#   workflow_dispatch:
+#   # push:
+#   #   branches:
+#   #     - main
+#   #     - master
+#   #   paths-ignore:
+#   #     - '.github/workflows/*'
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Output event data
+#         run: echo "${{ toJSON(github.event) }}"
+#       - name: ⬇️ Get code
+#         uses: actions/checkout@v3
+#       - name: 💿 Install NodeJS
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#       - name: 🛠 Install dependencies
+#         run: npm ci
+#       - name: 🚦 Run tests
+#         run: npm test
+#       - name: 👷‍♂️ Build project
+#         run: npm run build
+#       - name: 🚀 Deploy
+#         run: echo "Deploying..." 
