--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,47 @@
-# name: Deployment
-# on:
-#   push:
-#     branches:
-#       - main
-#       - dev
-
-# env:
-#   MONGODB_DB_NAME: gha-demo
-
-# jobs:
-#   test:
-#     env:
-#       MONGODB_CLUSTER_ADDRESS: cluster0.nnelrdw.mongodb.net
-#       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-#       MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-#       PORT: 8080
-
-#     environment: testing
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: ⬇️ Get Code
-#         uses: actions/checkout@v3
-#       - name: 🗃 Cache dependencies
-#         uses: actions/cache@v3
-#         with:
-#           path: ~/.npm
-#           key: npm-deps-${{ hashFiles('**/package-lock.json') }}
-#       - name: 🛠 Install dependencies
-#         run: npm ci
-#       - name: 🏃‍♂️ Run server
-#         run: npm start & npx wait-on http://127.0.0.1:$PORT
-#       - name: 🚦 Run tests
-#         run: npm test
-#       - name: 📺 Output information
-#         run: |
-#           echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
-
-#   deploy:
-#     needs: test
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: 📺 Output information
-#         run: |        
-#           echo "MONGODB_USERNAME: ${{ env.MONGODB_USERNAME }}"
-#           echo "MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}"
+name: Deployment (Container)
+on:
+  push:
+    branches:
+      - main
+      - dev
+env:
+  CACHE_KEY: node-deps
+  MONGODB_DB_NAME: gha-demo
+jobs:
+  test:
+    environment: testing
+    runs-on: ubuntu-latest
+    env:
+      MONGODB_CONNECTION_PROTOCOL: mongodb+srv
+      MONGODB_CLUSTER_ADDRESS: cluster0.nnelrdw.mongodb.net
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+      PORT: 8080
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Run server
+        run: npm start & npx wait-on http://127.0.0.1:$PORT # requires MongoDB Atlas to accept requests from anywhere!
+      - name: Run tests
+        run: npm test
+      - name: Output information
+        run: |
+          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output information
+        env:
+          PORT: 3000
+        run: |        
+          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
+          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
+          echo "${{ env.PORT }}"
