--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,22 @@ env:
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
-    env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.nnelrdw.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      PORT: 8080
-
-    environment: testing
     runs-on: ubuntu-latest
+    environment: testing
+    env:
+      MONGODB_CONNECTION_PROTOCOL: mongodb
+      MONGODB_CLUSTER_ADDRESS: mongodb 
+      MONGODB_USERNAME: root
+      MONGODB_PASSWORD: example
+      PORT: 8080
     container:
       image: node:16
+    services:
+      mongodb:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
     steps:
       - name: ⬇️ Get Code
         uses: actions/checkout@v3
