--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,15 +13,17 @@ jobs:
     environment: testing
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      MONGODB_CLUSTER_ADDRESS: mongodb 
+      MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017 
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
       PORT: 8080
-    container:
-      image: node:16
+    # container:
+    #   image: node:16
     services:
       mongodb:
         image: mongo
+        ports:
+          - 27017:27017
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
