--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -49,15 +49,8 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
-      - name: 🗃 Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: 🛠 Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: 🗃 Load & cache dependencies
+        uses: ./.github/actions/cached-deps
       - name: 👷‍♂️ Build website
         run: npm run build
       - name: 🔼 Upload artifacts
