--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -9,15 +9,8 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
-      - name: 🗃 Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: 🛠 Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: 🗃 Load & cache dependencies
+        uses: ./.github/actions/cached-deps
       - name: 🚦 Lint code
         run: npm run lint
   test:
@@ -25,15 +18,8 @@ jobs:
     steps:
       - name: ⬇️ Get code
         uses: actions/checkout@v3
-      - name: 🗃 Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: 🛠 Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: 🗃 Load & cache dependencies
+        uses: ./.github/actions/cached-deps
       - name: 🚦 Test code
         id: run-tests
         run: npm run test
