--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: 🗃 Load & cache dependencies
         uses: ./.github/actions/cached-deps
+        with:
+          caching: 'false'
       - name: 🚦 Lint code
         run: npm run lint
   test:
