--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'Whether to cache dependencies or not.'
     required: false
     default: 'true'
+outputs: 
+  used-cache:
+    description: Whether teh cache was used
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
@@ -17,5 +21,7 @@ runs:
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: 🛠 Install dependencies
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
-      run: npm ci
+      run: |
+        npm ci
+        echo "cache=$inputs.caching" >> GITHUB_OUTPUT
       shell: bash
