--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -20,6 +20,7 @@ runs:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: 🛠 Install dependencies
+      id: install
       if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       run: |
         npm ci
