--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deployment (Container)
 on:
-  push:
-    branches:
-      - main
-      - dev
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #     - dev
 env:
   CACHE_KEY: node-deps
   MONGODB_DB_NAME: gha-demo
