fix secret typo

--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -66,7 +66,7 @@ jobs:
         uses: './.github/actions/deploy-s3-js'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_ID: ${{ secrets.AWS_SECRET_ACCESS_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
           bucket: gha-custom-action-hosting
           dist-folder: ./dist
