output in gha deployed website url

--- a/.github/actions/deploy-s3-js/action.yml
+++ b/.github/actions/deploy-s3-js/action.yml
@@ -11,6 +11,8 @@ inputs:
   dist-folder:
     description: 'The folder containing the deployable files'
     required: true
+outputs:
+  description: 'The url of deployed website'
 runs:
   using: 'node16'
   main: 'main.js'
