--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -63,6 +63,7 @@ jobs:
       - name: 📰 Output contents
         run: ls
       - name: Deploy site
+        id: deploy
         uses: './.github/actions/deploy-s3-js'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -70,3 +71,6 @@ jobs:
         with:
           bucket: gha-custom-action-hosting
           dist-folder: ./dist
+      - name: 📺 Output information
+        run: |
+          echo "Live URL: ${{ steps.deploy.outpus.website-url }}"
