name of outputs

--- a/.github/actions/deploy-s3-js/action.yml
+++ b/.github/actions/deploy-s3-js/action.yml
@@ -12,7 +12,8 @@ inputs:
     description: 'The folder containing the deployable files'
     required: true
 outputs:
-  description: 'The url of deployed website'
+  website-url:
+    description: 'The url of deployed website'
 runs:
   using: 'node16'
   main: 'main.js'
