--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -62,9 +62,20 @@ jobs:
           path: ./dist
       - name: 📰 Output contents
         run: ls
+        # with javascript
+      # - name: Deploy site
+      #   id: deploy
+      #   uses: './.github/actions/deploy-s3-js'
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   with:
+      #     bucket: gha-custom-action-hosting
+      #     dist-folder: ./dist
+      # with Docker
       - name: Deploy site
         id: deploy
-        uses: './.github/actions/deploy-s3-js'
+        uses: './.github/actions/deploy-s3-docker'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
