--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -50,6 +50,9 @@ jobs:
           name: dist-files
           path: dist
   deploy:
+    permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -62,6 +65,11 @@ jobs:
           path: ./dist
       - name: 📰 Output contents
         run: ls
+      - name: 🪪 Get AWS permissions
+        uses: aws-actions/configure-aws-credentials
+        with:
+          role-to-assume: arn:aws:iam::678851572030:role/GithubDemo1
+          aws-region: us-east-1
         # with javascript
       # - name: Deploy site
       #   id: deploy
@@ -76,11 +84,8 @@ jobs:
       - name: Deploy site
         id: deploy
         uses: './.github/actions/deploy-s3-docker'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          bucket: gha-custom-action-hosting
+          bucket: gha-security-hosting-demo
           dist-folder: ./dist
       - name: 📺 Output information
         run: |
