--- a/.github/workflows/deploy-custom-actions.yml
+++ b/.github/workflows/deploy-custom-actions.yml
@@ -66,7 +66,7 @@ jobs:
       - name: 📰 Output contents
         run: ls
       - name: 🪪 Get AWS permissions
-        uses: aws-actions/configure-aws-credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::678851572030:role/GithubDemo1
           aws-region: us-east-1
