--- a/.github/workflows/order-management-service.yml
+++ b/.github/workflows/order-management-service.yml
@@ -32,6 +32,29 @@ jobs:
       is_terraform_changed: ${{ steps.check_modified.outputs.terraform == 'true' }}
       is_db_migration_changed: ${{ steps.check_modified.outputs.db_migration == 'true' }}
 
-        
+  terraform_apply:
+    name: ⚙️ Apply terraform changes
+    needs: prepare_modified_files
+    runs-on: ubuntu-latest
+    if: ${{ needs.prepare_modified_files.outputs.is_terraform_changed == 'true' }}
+    steps:
+      - run: echo "I am running cause terraform was changed"
 
+  db_migration:
+    name: 💾 Apply DB Migration
+    needs: prepare_modified_files
+    runs-on: ubuntu-latest
+    if: ${{ needs.prepare_modified_files.outputs.is_db_migration_changed == 'true' }}
+    steps:
+      - run: echo "I am running cause DB Migration was changed"
+    
+  modules:
+    name: Deploy modules ${{ matrix.modules.name }}
+    runs-on: ubuntu-latest
+    needs: prepare_modified_files
+    strategy:
+      matrix:
+        modules: ${{ fromJSON(needs.prepare_modified_files.outputs.modules) }}
+    steps:
+      - run: echo ${{ matrix.modules.name }}
     
